<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:background="@drawable/popup">

    <ImageView
        android:id="@+id/logop"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="-50dp"
        android:src="@drawable/logo2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="INSTAGRAM"
        android:textSize="24sp"
        android:layout_marginTop="-40dp"
        android:layout_gravity="center"
        android:textColor="@color/red"
        android:fontFamily="@font/jura_semibold"
        />
    <TextView
        android:autoLink="web"
        android:linksClickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apip"
        android:textColor="@color/red"
        android:layout_gravity="center"
        android:fontFamily="@font/jura_semibold"
        android:id="@+id/apip"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insa"
        android:layout_gravity="center"
        android:textColor="@color/red"
        android:fontFamily="@font/jura_semibold"
        android:id="@+id/insa"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cinta"
        android:layout_gravity="center"
        android:textColor="@color/red"
        android:fontFamily="@font/jura_semibold"
        android:id="@+id/cinta"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vivi"
        android:layout_gravity="center"
        android:textColor="@color/red"
        android:fontFamily="@font/jura_semibold"
        android:id="@+id/vivi"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viko"
        android:layout_gravity="center"
        android:textColor="@color/red"
        android:fontFamily="@font/jura_semibold"
        android:id="@+id/viko"
        />
</LinearLayout>